--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 		    
 		     <ul>
 			  <li><a href="#">Anatomy of a Database System - Hellerstein</a></li>
-			  <li><a href="#"> DBMS Notes - Conway</a></li>
-		    </ul>
+			  <li><a href="http://www.cs.ubc.ca/nest/dbsl/intro.html"> DBMS Notes - Conway</a></li>
+			   <li><a href="http://www.cs.ubc.ca/nest/dbsl/intro.html">Intro to Database Systems</a></li>
+			   <li><a href="http://www.slideshare.net/maxdemarzi/introduction-to-graph-databases-12735789">Intro to Graph Databases</a></li>
+			   
 		 </section>
 
 
