query processing over crowd sourced data

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 			  <li><a href="http://www.cs.ubc.ca/nest/dbsl/intro.html"> DBMS Notes - Conway</a></li>
 			   <li><a href="http://www.cs.ubc.ca/nest/dbsl/intro.html">Intro to Database Systems</a></li>
 			   <li><a href="http://www.slideshare.net/maxdemarzi/introduction-to-graph-databases-12735789">Intro to Graph Databases</a></li>
-			   
+			   <li><a href="http://www.slideshare.net/maxdemarzi/introduction-to-graph-databases-12735789">8 Rules of Data Stream Management</a></li>
+			   <li><a href="http://www.slideshare.net/maxdemarzi/introduction-to-graph-databases-12735789">Query Processing over Crowd Sourced Data.</a></li>
 		 </section>
 
 
